--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,28 @@
+# Nombre de la aplicación (opcional, para identificación)
 spring.application.name=seguros-inseguros
 
-# Configuracion para el acceso a la Base de Datos
+# Configuración para el acceso a la base de datos
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 spring.jpa.show-sql=true
 
-# Puerto donde escucha el servidor una vez se inicie
+# Puerto donde escuchará la aplicación
 server.port=8080
 
-# Datos de conexion con la base de datos MySQL
+# Datos de conexión con la base de datos MySQL
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/seguros_bd
 spring.datasource.username=root
 spring.datasource.password=
 
+# Carga la clave privada y la clave pública en el contexto
+rsa.private-key=classpath:certs/private.pem
+rsa.public-key=classpath:certs/public.pem
+
 # Para popular la BBDD
 spring.jpa.properties.javax.persistence.sql-load-script-source=sql/datos-prueba.sql
+
+spring.security
+
+
